tests/error/0015-macro.c
/*
PATTERN:

.
*/

#define X(A, A) 0

